--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
